[workspace]

members = [

    # 2015

    "day-01-2015",
    "day-02-2015",
    "day-03-2015",

    # 2018

    "2018-day-01",
    "2018-day-02",
    "2018-day-03",
    "2018-day-04",
    "2018-day-05",
    "2018-day-06",
    "2018-day-07",
    "2018-day-08",
    "2018-day-09",
    "2018-day-10",
    "2018-day-11",
    "2018-day-12",
    "2018-day-13",
    "2018-day-14",
    "2018-day-15",
    "2018-day-16",
    "2018-day-17",
    "2018-day-18",
    "2018-day-19",
    "2018-day-20",
    "2018-day-21",
    "2018-day-22",
    "2018-day-23",
    "2018-day-24",
    "2018-day-25",

    # 2019

    "day-01-2019",
]
